--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -12,7 +12,7 @@
   align-items: center;
   align-self: center;
   cursor: pointer;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
 }
 
 .headerContainer {
@@ -21,8 +21,9 @@
   z-index: 50;
   display: grid;
   /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
-  grid-template-columns: 1fr 1.5fr 1fr;
-  background-color: burlywood;
+  grid-template-columns: 1fr 2.5fr 1fr;
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -38,10 +39,9 @@
   border-radius: 9999px;
   padding: 0.5em;
   cursor: pointer;
-  margin-right: .5em;
+  margin-right: 0.5em;
   position: absolute;
   right: 0;
-
 }
 
 .middleHeader {
@@ -49,26 +49,57 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .searchInput {
   border-radius: 9999px;
-  padding: 1.125em 1em;
+  padding: 1em 2em;
+  font-size: 0.8em;
+
   border: none;
   outline: none;
   flex-grow: 1;
   --tw-text-opacity: 1;
   color: rgba(75, 85, 99, var(--tw-text-opacity));
   --tw-bg-opacity: 1;
-  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .searchInput:focus {
   border: 0.0625em solid #009cd5;
-  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 
+.rightHeader {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+
+.menuIcon,
+.userIcon {
+  width: 2em;
+  height: auto;
+  display: flex;
+  align-items: center;
+}
+
+.rightIconsContainer {
+  display: flex;
+  flex-direction: row-reverse;
+  border: 0.0625em solid black;
+  border-radius: 9999px;
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  cursor: pointer;
+  margin-right: 1em;
+  padding: 0.125em 0.25em;
 }
