drafted dropdown menu, login not working

--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -105,13 +105,72 @@
 }
 
 .dropDownMenu {
+  opacity: 97.5%;
   display: flex;
   flex-direction: column;
   position: absolute;
   bottom: 0;
   width: 10em;
   height: auto;
-  padding: .5em .5em;
+  border-radius: 0.5em;
+  padding: 0.5em 0.5em;
   background-color: grey;
-  transform: translate(0%, 100%);
+  transform: translate(-10%, 90%);
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dropDownItem {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  cursor: pointer;
+  outline: none;
+  opacity: 75%;
+  border: none;
+  border-radius: .125em;
+  text-decoration: none;
+  font-size: .75em;
+  padding: .5em;
+  display: flex;
+  justify-content: Center;
+  align-self: center;
+  color: #009cd5;
+  width: 75%;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+  var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dropDownItem:hover {
+  color: white;
+  background: #009cd5;
+  border: none;
+  opacity: 80%;
+}
+
+.headerNavLink {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  cursor: pointer;
+  outline: none;
+  opacity: 75%;
+  border: none;
+  border-radius: .125em;
+  text-decoration: none;
+  font-size: .75em;
+  padding: .5em;
+  display: flex;
+  justify-content: Center;
+  align-self: center;
+  color: white;
+  width: 75%;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+  var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  background: #009cd5;
+}
+
+.headerNavLink:hover {
+  border: none;
+  opacity: 90%;
 }
