--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,10 @@
 /* TODO Add site wide styles */
 
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+  height: 100%;
+  min-height: 100%;
 }
