added splash photo and transition effect upon scroll for navbar

--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -28,6 +28,7 @@
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    transition: 0.2s ease all;
 }
 
 .searchIcon {
@@ -73,7 +74,6 @@
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-
 }
 
 .searchInput:focus {
