--- a/frontend/src/components/Banner/BannerComponent.module.css
+++ b/frontend/src/components/Banner/BannerComponent.module.css
@@ -1,5 +1,6 @@
 .splashContainer {
   display: relative;
+  background-color: black;
 }
 
 @keyframes fadein {
@@ -13,9 +14,10 @@
 
 .bannerImg {
   width: 100%;
+  /* height: 100%; */
   height: 100%;
-  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-  animation: fadein 1s;
+  -webkit-animation: fadein .33s; /* Safari, Chrome and Opera > 12.1 */
+  animation: fadein .33s;
 }
 
 .splashText {
