added date range picker and added styling

--- a/frontend/src/components/Footer/FooterComponent.module.css
+++ b/frontend/src/components/Footer/FooterComponent.module.css
@@ -1,6 +1,6 @@
 .footer {
-	--tw-bg-opacity: 1;
-background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   position: absolute;
@@ -10,13 +10,28 @@ background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
   left: 0;
   width: 100%;
   opacity: 85%;
+  border-top: 0.25em solid #009cd5;
 }
 
 .footerLogo {
   position: relative;
-  margin-top: .125em;
+  margin-top: 0.0625em;
   margin-right: 1em;
   height: 3em;
   width: auto;
   cursor: pointer;
+  animation: fadein 1s;
+}
+
+.footerLogo:active {
+  transform: scale(0.95);
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
