--- a/frontend/src/components/Banner/BannerComponent.module.css
+++ b/frontend/src/components/Banner/BannerComponent.module.css
@@ -16,19 +16,23 @@
   width: 100%;
   /* height: 100%; */
   height: 100%;
-  -webkit-animation: fadein .33s; /* Safari, Chrome and Opera > 12.1 */
-  animation: fadein .33s;
+  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+  animation: fadein 1s;
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .splashText {
   position: absolute;
   background-color: transparent;
   font-weight: bold;
-  font-size: .9em;
+  font-size: 0.9em;
   text-align: center;
   color: #009cd5;
   top: 50%;
   width: auto;
+  transition-duration: 150ms;
   left: 50%;
   transform: translate(-50%, -50%);
   -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
@@ -43,6 +47,7 @@
   font-weight: bold;
   border: none;
   padding: 1em 3em;
+  transition-duration: 150ms;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
