--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -74,7 +74,6 @@
   border-radius: 9999px;
   padding: 1em 2em;
   font-size: 0.8em;
-
   border: none;
   transition-duration: 150ms;
   outline: none;
@@ -87,10 +86,10 @@
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  color: #009cd5;
 }
 
 .searchInput:active {
-  transform: scale(1.01);
 }
 
 .searchInput:focus {
@@ -159,7 +158,7 @@
     opacity: 0;
   }
   to {
-    opacity: 1;
+    opacity: 97.5%;
   }
 }
 
@@ -170,8 +169,9 @@
   cursor: pointer;
   outline: none;
   opacity: 75%;
+  font-weight: bold;
   border: none;
-  border-radius: 0.125em;
+  border-radius: 0.25em;
   text-decoration: none;
   font-size: 0.775em;
   padding: 0.5em;
@@ -180,7 +180,7 @@
   justify-content: Center;
   align-self: center;
   color: #009cd5;
-  width: 75%;
+  width: 80%;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
@@ -203,7 +203,7 @@
   outline: none;
   opacity: 75%;
   border: none;
-  border-radius: 0.125em;
+  border-radius: 0.25em;
   text-decoration: none;
   font-size: 0.775em;
   padding: 0.5em;
@@ -221,4 +221,74 @@
 .headerNavLink:hover {
   border: none;
   opacity: 90%;
+}
+
+.dateRangePickerContainer {
+  display: flex;
+  flex-direction: column;
+  grid-column: span 3 / span 3;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0.25em;
+  margin-bottom: 1.25em;
+  animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.searchBtnsContainer {
+  margin-top: 1em;
+  display: flex;
+}
+
+.submitSearchBtn {
+  flex-grow: 1;
+  color: #009cd5;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  opacity: 75%;
+  transform: scale(1.25);
+  transition: 0.2s ease all;
+    text-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.cancelSearchBtn {
+  flex-grow: 1;
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  opacity: 75%;
+  transform: scale(1.25);
+  transition: 0.2s ease all;
+    text-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.submitSearchBtn:hover {
+  transform: scale(1.5);
+  opacity: 100%;
+}
+.submitSearchBtn:active {
+  transform: scale(1);
+}
+
+.cancelSearchBtn:hover {
+  transform: scale(1.5);
+  opacity: 100%;
+}
+.cancelSearchBtn:active {
+  transform: scale(1);
 }
