--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -139,7 +139,7 @@
   flex-direction: column;
   position: absolute;
   bottom: 0;
-  width: 7.5em;
+  width: 15em;
   height: auto;
   border-radius: 0.5em;
   padding: 0.5em 0.5em;
@@ -151,6 +151,7 @@
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   -webkit-animation: fadein 0.33s; /* Safari, Chrome and Opera > 12.1 */
   animation: fadein 0.33s;
+  font-size: .75em;
 }
 
 @keyframes fadein {
@@ -182,7 +183,8 @@
   color: #009cd5;
   width: 80%;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  background-color: transparent;
 }
 
 .dropDownItem:active {
@@ -197,6 +199,7 @@
 }
 
 .headerNavLink {
+
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   cursor: pointer;
@@ -216,6 +219,7 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   background: #009cd5;
+
 }
 
 .headerNavLink:hover {
@@ -291,4 +295,17 @@
 }
 .cancelSearchBtn:active {
   transform: scale(.75);
+}
+
+.dropDownHeader {
+  font-weight: bold;
+  margin: .5em;
+  color: #009cd5;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
 }
