--- a/frontend/src/components/TestSearch/SearchContainer.module.css
+++ b/frontend/src/components/TestSearch/SearchContainer.module.css
@@ -62,6 +62,17 @@
 .resultsContainer {
   display: flex;
   flex-direction: column;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  cursor: pointer;
+  border-radius: 1rem;
+}
+
+.resultsContainer:hover {
+  opacity: 90%;
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .priceDetail {
@@ -79,4 +90,10 @@
 .total {
   text-align: right;
   font-weight: 200;
+}
+
+.divisor2 {
+  border-bottom: 0.0625em solid #009cd5;
+  width: 2.5em;
+  margin-bottom: 2em;
 }
