--- a/frontend/src/components/TestSearch/SearchContainer.module.css
+++ b/frontend/src/components/TestSearch/SearchContainer.module.css
@@ -1,16 +1,18 @@
 .imgContainer {
   position: relative;
-  width: 20rem;
-  height: 13rem;
+  width: 20em;
+  height: 15rem;
   flex-shrink: 0;
   justify-content: space-between;
+
 }
 
 .img {
   position: absolute;
   width: 20rem;
   object-fit: cover;
-  height: 13rem;
+  height: 15rem;
+
 }
 
 .heartIcon {
@@ -19,15 +21,15 @@
 
 .detailContainer {
   display: flex;
-  display: flex;
+  position: relative;
   justify-content: space-between;
-  align-items: center;
 }
 
 .results {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+
   /* padding-left: 10em; */
 }
 
@@ -40,14 +42,10 @@
   line-height: 1.75rem;
 }
 
-.divisor {
-  border-bottom: 0.0625em solid #009cd5;
-  width: 2.5em;
-}
-
 .detail {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 1rem;
+  margin-top: 1.5em;
+  margin-left: 3.75em;
   --tw-text-opacity: 1;
   color: rgba(107, 114, 128, var(--tw-text-opacity));
   flex-grow: 1;
@@ -57,6 +55,7 @@
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 600;
+  margin-left: 2.5em;
 }
 
 .resultsContainer {
@@ -66,34 +65,54 @@
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   cursor: pointer;
   border-radius: 1rem;
+  margin-right: 5em;
+  margin-left: 5em;
+  margin-bottom: 5em;
 }
 
 .resultsContainer:hover {
-  opacity: 90%;
-  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  opacity: 95%;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .priceDetail {
   display: flex;
   justify-content: right;
   align-self: right;
+  margin-right: 1.5em;
+  margin-bottom: .5em;
 }
 
 .price {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.25rem;
   font-weight: 600;
+  color: #009cd5;
 }
 
 .total {
   text-align: right;
   font-weight: 200;
+  font-size: 1.00em;
 }
 
 .divisor2 {
-  border-bottom: 0.0625em solid #009cd5;
-  width: 2.5em;
+  border-bottom: 0.125em solid #009cd5;
+  width: 20em;
   margin-bottom: 2em;
+  margin-left: 5em;
+}
+
+.subHeader {
+
+  font-size: 1.25em;
+  margin-left: 3.75em;
+  margin-top: 2.5em;
+  color: #009cd5;
+}
+
+.spotName {
+  margin-left: 2em;
+  margin-top: 0.5em;
+  font-size: 1.75em;
 }
