--- a/frontend/src/components/TestSpot/AllReviewsComponent.module.css
+++ b/frontend/src/components/TestSpot/AllReviewsComponent.module.css
@@ -16,7 +16,7 @@
 }
 .reviewContainer {
   width: 100%;
-  border-radius: .5em;
+  border-radius: 0.5em;
   display: flex;
   justify-content: space-between;
   justify-items: center;
@@ -28,7 +28,6 @@
 }
 
 .reviewContainer:hover {
-
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -40,8 +39,8 @@
   flex-direction: column;
   align-items: center;
   margin-left: 0em;
-  padding-right: .5em;
-  padding-left: .5em;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
 }
 
 .userInfo {
@@ -68,10 +67,9 @@
   justify-content: left;
   padding-top: 0.5em;
   padding-left: 0.5em;
-  border-radius: .5em;
+  border-radius: 0.5em;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   font-size: 1em;
-  font-style: italic;
-  color:rgb(107, 114, 128)
+  color: rgb(107, 114, 128);
 }
