--- a/frontend/src/components/TestSpot/AllReviewsComponent.module.css
+++ b/frontend/src/components/TestSpot/AllReviewsComponent.module.css
@@ -10,6 +10,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0 auto;
   padding-left: 5em;
+  padding-right: 5em;
   padding-top: 2.5em;
   margin-bottom: 5em;
   position: relative;
