--- a/frontend/src/components/TestSpot/AllReviewsComponent.module.css
+++ b/frontend/src/components/TestSpot/AllReviewsComponent.module.css
@@ -11,9 +11,11 @@
   margin: 0 auto;
   padding-left: 5em;
   padding-right: 5em;
-  padding-top: 2.5em;
+  margin-top: 2.5em;
   margin-bottom: 5em;
   position: relative;
+  overflow-y: scroll;
+  max-height: 21em;
 }
 .reviewContainer {
   width: 100%;
@@ -26,6 +28,7 @@
   align-items: center;
   align-self: center;
   transition: 0.2s ease all;
+  position: relative;
 }
 
 .reviewContainer:hover {
@@ -45,11 +48,11 @@
 }
 
 .userInfo {
-  font-size: 1.5em;
-  font-weight: bold;
+  font-size: 1em;
   color: rgb(107, 114, 128);
   width: 1em;
   display: flex;
+  text-align: center;
   justify-content: center;
   justify-items: center;
   justify-self: center;
@@ -73,4 +76,22 @@
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   color: rgb(107, 114, 128);
+}
+
+.deleteContainer {
+  width: 1.25em;
+  height: 1.25em;
+  right: 0.5em;
+  top: 0.5em;
+  color: rgb(107, 114, 128);
+  position: absolute;
+  cursor: pointer;
+}
+
+.deleteContainer:hover {
+  transition: 0.2s ease all;
+  color: #009cd5;
+}
+.deleteContainer:active {
+  transform: scale(0.75);
 }
