--- a/frontend/src/components/TestSpot/ReviewFormContainer.module.css
+++ b/frontend/src/components/TestSpot/ReviewFormContainer.module.css
@@ -10,8 +10,10 @@
 }
 
 .outerContainer:hover {
-    --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .labelContainer {
@@ -84,7 +86,7 @@
 }
 
 .btn {
-    cursor: pointer;
+  cursor: pointer;
   margin-top: 1em;
   height: 5em;
   width: 75%;
