--- a/frontend/src/components/TestBookings/BookingContainer.module.css
+++ b/frontend/src/components/TestBookings/BookingContainer.module.css
@@ -21,7 +21,6 @@
   flex-direction: column;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  cursor: pointer;
   border-radius: 1rem;
   margin-right: 5em;
   position: relative;
@@ -35,4 +34,13 @@
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.imgContainer {
+  position: relative;
+  width: 20em;
+  height: 15rem;
+  flex-shrink: 0;
+  justify-content: space-between;
+  cursor: pointer;
 }
