--- a/frontend/src/components/TestBookings/BookingContainer.module.css
+++ b/frontend/src/components/TestBookings/BookingContainer.module.css
@@ -43,4 +43,17 @@
   flex-shrink: 0;
   justify-content: space-between;
   cursor: pointer;
+  transition-duration: 200ms;
+  opacity: 95%;
+}
+
+.imgContainer:hover {
+  opacity: 100%;
+}
+
+.spotName {
+  margin-left: 2em;
+  margin-top: 0.5em;
+  font-size: 1.75em;
+  cursor: pointer;
 }
