--- a/frontend/src/components/EditBookingModal/EditBookingForm.module.css
+++ b/frontend/src/components/EditBookingModal/EditBookingForm.module.css
@@ -1,191 +1,210 @@
 @keyframes fadein {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  from {
+    opacity: 0;
   }
-
-  .outerContainer {
-    --tw-bg-opacity: 1;
-    background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-    border-radius: 1em;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-items: center;
-    transition-duration: 150ms;
-    justify-self: center;
-    align-content: center;
-    align-items: center;
-    animation: fadein 0.33s;
-    align-self: center;
-    --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-      0 10px 10px -5px rgba(0, 0, 0, 0.04);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  to {
+    opacity: 1;
   }
+}
 
-  .outerContainer:hover {
-    --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
+.outerContainer {
+  --tw-bg-opacity: 1;
+  background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+  border-radius: 1em;
+  width: 46em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  transition-duration: 150ms;
+  justify-self: center;
+  align-content: center;
+  align-items: center;
+  animation: fadein 0.33s;
+  align-self: center;
+  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 
-  .logoContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
-    align-content: center;
-    align-items: center;
-    align-self: center;
-  }
+.outerContainer:hover {
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 
-  .logo {
-    width: 7.5em;
-    height: auto;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-  }
+.logoContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+}
 
-  .cardContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
-    border-radius: 1.5em;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    align-content: center;
-    align-items: center;
-    padding-top: 1em;
-    align-self: center;
-    width: 90%;
-    --tw-bg-opacity: 1;
-    background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-  }
+.logo {
+  width: 7.5em;
+  height: auto;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
 
-  .title,
-  .subtitle {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
-    align-content: center;
-    align-items: center;
-    font-size: 1.125em;
-  }
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  border-radius: 1.5em;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  align-content: center;
+  align-items: center;
+  padding-top: 1em;
+  align-self: center;
+  width: 90%;
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
 
-  .subtitle {
-    margin-top: 0.5em;
-    font-size: 1rem;
-    font-weight: normal;
-  }
+.title,
+.subtitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
 
-  .middleContainer {
-    margin-top: 1em;
-    padding-top: 1em;
-    width: 87.5%;
-    display: grid;
-    grid-template-columns: 0.25fr 1fr;
-  }
+  align-content: center;
+  align-items: center;
+  font-size: 1.125em;
+}
 
-  .middleHeader {
-    font-weight: bold;
+.subtitle {
+  margin-top: 0.5em;
+  font-size: 1rem;
+  color: #009cd5;
+  font-weight: normal;
+}
 
-    font-size: 1.125em;
-    grid-column: span 2 / span 2;
-  }
+.middleContainer {
+  margin-top: 1em;
+  padding-top: 1em;
+  width: 87.5%;
+  display: grid;
+  grid-template-columns: 0.25fr 1fr;
+}
 
-  .divisor {
-    width: 100%;
-    margin-top: 0.5em;
-    border-bottom: 0.0625em solid #009cd5;
-    grid-column: span 2 / span 2;
-  }
+.middleHeader {
+  font-weight: bold;
 
-  .label,
-  .detail {
-    margin-top: 0.5em;
-  }
+  font-size: 1.125em;
+  grid-column: span 2 / span 2;
+}
 
-  .label {
-    font-weight: bold;
-    font-size: 0.8em;
-    display: flex;
-    align-items: center;
-  }
+.divisor {
+  width: 100%;
+  margin-top: 0.5em;
+  border-bottom: 0.0625em solid #009cd5;
+  grid-column: span 2 / span 2;
+}
 
-  .detail {
-    font-size: 0.85em;
-  }
+.label,
+.detail {
+  margin-top: 0.5em;
+}
 
-  .middleFooter {
-    margin-top: 1em;
-    font-weight: lighter;
-    font-size: 0.75em;
-    grid-column: span 2 / span 2;
-  }
+.label {
+  font-weight: bold;
+  font-size: 0.8em;
+  display: flex;
+  align-items: center;
+}
 
-  .btnsContainer {
-    margin-top: 1.5em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    justify-items: center;
-    justify-self: center;
-    align-content: center;
-    align-items: center;
-    margin-bottom: 1.5em;
-  }
+.detail {
+  font-size: 0.85em;
+}
 
-  .btnSubmit {
-    margin-left: 1em;
-  }
+.middleFooter {
+  margin-top: 1em;
+  font-weight: lighter;
+  font-size: 0.75em;
+  grid-column: span 2 / span 2;
+}
 
-  .btnCancel {
-    margin-right: 1em;
-  }
+.btnsContainer {
+  margin-top: 1.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  justify-items: center;
+  justify-self: center;
+  align-content: center;
+  align-items: center;
+  margin-bottom: 1.5em;
+}
 
-  .btnSubmit,
-  .btnCancel {
-    width: 7.5em;
-    height: 4em;
-    font-size: 0.85rem;
-    outline: none;
-    border: none;
-    color: white;
-    opacity: 80%;
-    transition-duration: 150ms;
-    border-radius: 0.5em;
-    cursor: pointer;
-    --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
+.btnSubmit {
+  margin-left: 1em;
+}
 
-  .btnSubmit:hover,
-  .btnCancel:hover {
-    opacity: 100%;
-  }
+.btnCancel {
+  margin-right: 1em;
+}
 
-  .btnSubmit:active,
-  .btnCancel:active {
-    opacity: 100%;
-    transform: scale(0.925);
-  }
+.btnSubmit,
+.btnCancel {
+  width: 7.5em;
+  height: 4em;
+  font-size: 0.85rem;
+  outline: none;
+  border: none;
+  color: white;
+  opacity: 80%;
+  transition-duration: 150ms;
+  border-radius: 0.5em;
+  cursor: pointer;
+  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 
-  .btnSubmit {
-    background-color: #009cd5;
-  }
+.btnSubmit:hover,
+.btnCancel:hover {
+  opacity: 100%;
+}
 
-  .btnCancel {
-    --tw-bg-opacity: 1;
-    background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-  }
+.btnSubmit:active,
+.btnCancel:active {
+  opacity: 100%;
+  transform: scale(0.925);
+}
+
+.btnSubmit {
+  background-color: #009cd5;
+}
+
+.btnCancel {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+
+.dateRangePickerContainer {
+  grid-column: span 2 / span 2;
+  position: relative;
+  left: 0em;
+  top: 0em;
+  margin-top: 1em;
+  margin-bottom: .5em;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  cursor: pointer;
+}
