--- a/frontend/src/components/TestSearch/SearchContainer.module.css
+++ b/frontend/src/components/TestSearch/SearchContainer.module.css
@@ -116,3 +116,42 @@
   margin-top: 0.5em;
   font-size: 1.75em;
 }
+
+
+.map {
+  margin-top: 0em;
+  display: inline-flex;
+  background-color: brown;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  margin-right: 5em;
+  width: 25em;
+  height: 40em;
+}
+
+.map:hover {
+  transition-duration: 200ms;
+  opacity: 95%;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outerContainer {
+  height: 55em;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  align-content: center;
+
+
+}
+
+.detail, .spotName {
+  transform: translate(-5%, 0%);
+}
