fixated sorry screen for no results

--- a/frontend/src/components/Footer/FooterComponent.module.css
+++ b/frontend/src/components/Footer/FooterComponent.module.css
@@ -1,6 +1,6 @@
 .footer {
-  --tw-bg-opacity: 1;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+  /* --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity)); */
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   position: fixed;
