--- a/frontend/src/components/Banner/BannerComponent.module.css
+++ b/frontend/src/components/Banner/BannerComponent.module.css
@@ -2,6 +2,7 @@
   display: absolute;
   background-color: black;
   margin: 0;
+
   padding: 0;
 }
 
@@ -17,7 +18,7 @@
 .bannerImg {
   width: 100%;
   /* height: 100%; */
-  height: 100;
+  height: 100vh;
   -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
   animation: fadein 1s;
   --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
