--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -78,7 +78,7 @@
 }
 
 .searchInput {
-  border-radius: .5em;
+  border-radius: .75em;
   padding: 1em 2em;
   font-size: 0.8em;
   border: none;
@@ -323,7 +323,8 @@
   animation: fadein 0.5s;
   width: 5.5em;
   height: 5em;
-
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 
   display: flex;
   flex-direction: column;
@@ -338,14 +339,14 @@
   --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  transform: translate(-10%, 92.5%);
+  transform: translate(-7.5%, 85%);
 }
 
 .menuItem {
   border-radius: 0.5em;
   --tw-bg-opacity: 1;
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-  width: 100%;
+  width: 91%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -371,7 +372,7 @@
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   text-decoration: none;
-
+  font-weight: bold;
 }
 
 .menuItem:hover {
