styled signup form

--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -322,7 +322,7 @@
 .outerContainer {
   animation: fadein 0.5s;
   width: 5.5em;
-  height: 5em;
+  height: 7em;
 
   display: flex;
   flex-direction: column;
@@ -335,7 +335,7 @@
   position: absolute;
   bottom: 0;
 
-  transform: translate(-8.5%, 85%);
+  transform: translate(-8.25%, 90%);
 }
 
 .menuItem {
@@ -352,7 +352,7 @@
   cursor: pointer;
   transition: 0.2s ease all;
   align-items: center;
-  font-size: .75em;
+  font-size: .625em;
   opacity: 95%;
   align-self: center;
   border-bottom: 0.0625em solid #009cd5;
@@ -368,7 +368,8 @@
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   text-decoration: none;
-  font-weight: bold;
+  text-transform: uppercase;
+
 }
 
 .menuItem:hover {
