--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -113,7 +113,7 @@
 
 .menuIcon,
 .userIcon {
-  width: 2em;
+  width: 2.25em;
   height: auto;
   display: flex;
   align-items: center;
@@ -122,6 +122,7 @@
 
 .rightIconsContainer {
   display: flex;
+
   flex-direction: row-reverse;
   border: 0.0625em solid black;
   border-radius: .5em;
@@ -321,8 +322,8 @@
 
 .outerContainer {
   animation: fadein 0.5s;
-  width: 5.5em;
-  height: 7em;
+  width: 5.75em;
+  height: 8em;
 
   display: flex;
   flex-direction: column;
@@ -335,7 +336,7 @@
   position: absolute;
   bottom: 0;
 
-  transform: translate(-8.25%, 90%);
+  transform: translate(-10.0%, 95%);
 }
 
 .menuItem {
@@ -353,10 +354,11 @@
   transition: 0.2s ease all;
   align-items: center;
   font-size: .625em;
-  opacity: 95%;
+  opacity: 92.5%;
   align-self: center;
   border-bottom: 0.0625em solid #009cd5;
   color: #009cd5;
+
 
 }
 
@@ -369,13 +371,15 @@
   border-bottom-right-radius: 0;
   text-decoration: none;
   text-transform: uppercase;
-
+  font-weight: bold;
+  
 }
 
 .menuItem:hover {
     color: white;
     background-color: #009cd5;
-    opacity: 80%;
+    opacity: 75%;
+    transform: scale(1.03);
 }
 
 .menuItem:first-child {
