--- a/frontend/src/components/SignupFormPage/SignupForm.module.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.module.css
@@ -4,7 +4,7 @@
   opacity: 90%;
   display: flex;
   flex-direction: column;
-  animation: fadein 1s;
+  animation: fadein .5s;
 }
 
 .signupLabel {
@@ -14,7 +14,7 @@
 }
 
 .signupInput {
-  margin: 1em 0em;
+  margin: 1.25em 0em;
   padding: 1em 1em;
   width: 90%;
   font-size: 1em;
@@ -70,7 +70,7 @@ input[type="textarea"] {
   gap: 0.75em;
   justify-content: center;
   justify-items: center;
-  color: #009cd5;
+  color: rgb(107, 114, 128);
   align-content: center;
   align-items: center;
   align-self: center;
@@ -110,7 +110,7 @@ input[type="textarea"] {
 }
 .headerFooter {
   margin: 0 auto;
-
+  margin-top: .5em;
   font-size: 0.9em;
 }
 
@@ -129,6 +129,7 @@ input[type="textarea"] {
 
 .title {
   font-weight: bold;
+  margin-top: .5em;
   font-size: 1.25em;
   padding-right: 0.5em;
 }
