--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -78,7 +78,7 @@
 }
 
 .searchInput {
-  border-radius: .75em;
+  border-radius: 1.5em;
   padding: 1em 2em;
   font-size: 0.8em;
   border: none;
@@ -336,7 +336,7 @@
   position: absolute;
   bottom: 0;
 
-  transform: translate(-10.0%, 95%);
+  transform: translate(-11%, 95%);
 }
 
 .menuItem {
@@ -371,8 +371,8 @@
   border-bottom-right-radius: 0;
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: bold;
-  
+
+
 }
 
 .menuItem:hover {
