--- a/frontend/src/components/TestSpots/SpotsContainer.module.css
+++ b/frontend/src/components/TestSpots/SpotsContainer.module.css
@@ -10,7 +10,7 @@
 
   display: grid;
   gap: 1em;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
   --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -22,8 +22,14 @@
 .detailContainer {
   animation: fadein 1s;
   display: grid;
-  gap: 1em;
+ height: 27.5em;
+  gap: .75em;
   grid-template-rows: 1fr 0.25fr;
+
+}
+
+.detailContainer:last-child {
+
 }
 
 .detailUpperContainer {
