--- a/frontend/src/components/BookingConfirmationModal/Sorry.module.css
+++ b/frontend/src/components/BookingConfirmationModal/Sorry.module.css
@@ -92,6 +92,14 @@ box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #
   margin-top: 1em;
   font-size: 0.9em;
   font-weight: normal;
+  flex-direction: row;
+}
+
+.logo {
+  height: 1.75em;
+  color:#009cd5;
+  margin-left: .25em;
+  width: 1.75em;
 }
 
 .middleContainer {
