--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -113,13 +113,13 @@
 .user {
   background-color: #009cd5;
   border-radius: 999px;
-  height: 1.75em;
-  width: 1.75em;
+  height: 2em;
+  width: 2em;
   animation: fadein2 0.25s;
   color: rgb(229, 231, 235);
-  margin-right: 0.75em;
-  font-size: 1.125em;
-  opacity: 0.85;
+  margin-right: .9em;
+  font-size: 1em;
+  opacity: 0.775;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -127,6 +127,9 @@
   justify-self: center;
   align-content: center;
   align-items: center;
+  border: .075em solid black;
+	--tw-border-opacity: 1;
+border-color: rgba(75, 85, 99, var(--tw-border-opacity));
   align-self: center;
 }
 
@@ -138,7 +141,7 @@
     opacity: 0;
   }
   to {
-    opacity: 0.85;
+    opacity: 0.775;
   }
 }
 
